# docs/swagger.yaml
@@ -14,6 +14,10 @@ definitions:
         - $ref: '#/definitions/mods.ProxyPoolType'
         default: "off"
         description: 代理类型 off cn intl
+      screenshot:
+        default: false
+        description: 是否截图 默认false
+        type: boolean
       url:
         description: 请求路径，必须携带http头
         type: string
@@ -58,6 +62,10 @@ definitions:
         - $ref: '#/definitions/mods.ProxyPoolType'
         default: "off"
         description: 代理类型 off cn intl
+      screenshot:
+        default: false
+        description: 是否截图 默认false
+        type: boolean
       url:
         description: 请求路径，必须携带http头
         type: string
@@ -81,6 +89,10 @@ definitions:
         - $ref: '#/definitions/mods.ProxyPoolType'
         default: "off"
         description: 代理类型 off cn intl
+      screenshot:
+        default: false
+        description: 是否截图 默认false
+        type: boolean
       url:
         description: 请求路径，必须携带http头
         type: string
